fix image presentation on mobile

--- a/src/components/Presentation/_presentation.scss
+++ b/src/components/Presentation/_presentation.scss
@@ -1,24 +1,12 @@
-section {
-  margin-top: var(--section-spacing);
-  margin-bottom: var(--section-spacing);
-}
-
-
 .presentation {
   padding: 0 2rem;
   color: #2c2c2c;
   text-align: center;
 
-  &__header,
-  &__title,
-  &__underline,
-  &__body,
-  &__image img {
-    margin-bottom: 1rem; 
-  }
+
 
   &__title {
-    font-size: clamp(1.5rem, 4vw, 2rem); 
+    font-size: clamp(1.5rem, 4vw, 2rem); // Responsive font size using clamp
   }
 
   &__underline {
@@ -26,37 +14,32 @@ section {
     width: 100px;
     height: 4px;
     background-color: #2c2c2c;
-
-    @media (max-width: 576px) {
-      margin-bottom: 1rem; 
+    margin: auto; // Centered margin for better alignment
   }
 
-  
   &__body {
     display: flex;
     align-items: center;
-    gap: 4rem;
+    gap: 6rem;
 
-    @media (max-width: 900px) {
+    @media (max-width: 768px) {
       flex-direction: column;
-      gap: 0;
-      padding: 0;
+      gap: 1rem;
     }
   }
 
   &__image img {
     max-width: 100%;
     height: auto;
-    opacity: 0.8; 
+    opacity: 0.8; // Uniform opacity for consistency
 
-    @media (max-width: 900px) {
+    @media (max-width: 800px) {
       position: absolute;
+      width: 100%;
+      opacity: 0.1;
+      transform: translateY(-150px);
       top: 0;
       left: 0;
-      width: 100%;
-      height: auto; 
-      opacity: 0.1;
-     
     }
   }
 }
@@ -64,28 +47,27 @@ section {
 .presentation__content {
   max-width: 800px;
   line-height: 1.6;
-  margin: auto; 
+  margin: auto;
 
   @media (max-width: 800px) {
-    max-width: 900px;
-  
+    max-width: 600px;
   }
 
   @media (max-width: 480px) {
-    padding: 0;
+    max-width: 90%;
+    padding: 0 1rem;
   }
 }
 
 
 h1, h2, p {
-  font-size: clamp(1rem, 2.5vw, 2.5rem); 
+  margin-bottom: 0.5rem;
 }
 
 h2 {
-  font-size: clamp(0.9rem, 2vw, 2rem); 
+  font-size: clamp(0.9rem, 2vw, 2rem); // Responsive font sizes using clamp for h2
 }
 
 p {
-  font-size: clamp(1rem, 1.5vw, 1.2rem); 
-}
+  font-size: clamp(1rem, 1.5vw, 1rem); // Responsive font sizes using clamp for paragraph
 }
